@@ -1,3 +1,8 @@
+2002-04-22  Stefan Hundhammer  <sh@suse.de>
+
+	* Applied Asian language support patch by 
+	  Toyohiro Asukai <toyohiro@ksmplus.com>
+
 2002-04-18  Stefan Hundhammer  <sh@suse.de>
 
 	* KDE-3 migration:
